--- a/spring9/pom.xml
+++ b/spring9/pom.xml
@@ -11,5 +11,16 @@
 
     <artifactId>spring9</artifactId>
 
-
+<dependencies>
+    <dependency>
+        <groupId>aspectj</groupId>
+        <artifactId>aspectjrt</artifactId>
+        <version>1.5.4</version>
+    </dependency>
+    <dependency>
+        <groupId>org.aspectj</groupId>
+        <artifactId>aspectjweaver</artifactId>
+        <version>1.9.5</version>
+    </dependency>
+</dependencies>
 </project>
